Make script-created DOM events get dispatched to the system event group just like user events.  This fixes firing keypress events at a form input, since editor listens for keypresses using the system event group.  Bug 213144, r+sr=bzbarsky, a=chofmann.